--- a/Input/input1.html
+++ b/Input/input1.html
@@ -7,7 +7,12 @@
   <p>{{ message }}</p>
   <button v-on:click="reverseMessage">逆转消息</button>
 </div>
+<div id="app-6">
+  <p>{{ message }}</p>
+  <input v-model="message">
+</div>
 </body>
+
 
 <script src="2.js"></script>
 
