--- a/v-bind/v-bind.html
+++ b/v-bind/v-bind.html
@@ -9,7 +9,7 @@
         <div id="app">
             <ul class="pagination">
                 <li v-for="n in pageCount">
-                    <a href="javascripit:void(0)" v-bind:class="activeNumber === n + 1 ? 'active' : ''">{{ n + 1 }}</a>
+                    <a href="javascripit:void(0)" v-bind:class="activeNumber === n ? 'active' : ''">{{ n }}</a>
                 </li>
             </ul>
         </div>
@@ -19,7 +19,7 @@
         var vm = new Vue({
             el: '#app',
             data: {
-                activeNumber: 2,
+                activeNumber: 1,
                 pageCount: 10
             }
         })
